potential fix for rotating card clipping

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -61,7 +61,7 @@ body {
   -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
-  z-index: -1;
+  z-index: -999999999;
   opacity: 0.6;
   position: fixed;
   top: 0;
@@ -498,6 +498,7 @@ img {
 }
 // About Page
 #about-section {
+  z-index: 999;
   box-sizing: border-box;
   position: relative;
   height: fit-content;
@@ -625,12 +626,6 @@ img {
 }
 
 .about-page-container {
-  background: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0.082) 40%,
-    rgba(0, 0, 0, 0.035) 90%,
-    rgba(0, 0, 0, 0) 100%
-  );
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
